--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
 
             <div class="portifolio">
-                <a href="/HTML/portifolio.html">
+                <a href="portifolio.html">
                     <button>
                         <i class='bx bx-link' style='color:#ffffff' ></i>
                         <h1>Portifolio</h1>
